# joelmaykon94

./: .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  CV.md  DOCUMENTATION_DASHBOARD.md  LABS.md  PROJECTS.md  README-QUALITY.md  README.md  REFERS.md  ROADMAP_2026.md  hello_world.py  mise.toml  rewrite.yml  sonar-project.properties
.devcontainer/: devcontainer.json
.prompts/: handoff.prompt
.specify/memory/: INDEX.md  MODULES-SUMMARY.md  SYSTEM-ARCHITECTURE-INTEGRATION.md
@angular/financial/: README.md  angular.json  package-lock.json  package.json
@devops/: README.md  docker-compose.yml  sonar-project.properties
@devops/sonarqube/: README.md  docker-compose.yml
@java/atomant-auth/: README.md  pom.xml
angular/financial/: AGENTS.md  Dockerfile  angular.json  package-lock.json  package.json
articles/ga_sample/: pyproject.toml
articles/ga_sample/src/google_analytics_sample/: kaggle.ipynb
data_science_zero/: datasciencester.ipynb
databricks/: README.md
delta_lake/: README.md
detection_anomalies/: README.md
devops/: .env  run-quality.sh
devops/aws/: README.md
docs/: README.md  docusaurus.config.js  local-llm-setup.md  package-lock.json  package.json  pnpm-lock.yaml
etl/: README.md  optimize_dt.py
financial_etl/: README.md
ingestion/: README.md
local-llm/: AGENTS.md  start-coder-servers.sh  start-server.sh
model_prediction_financial/: README.md
npl_sentimental/: README.md
poc/: 1_duck-db-polars-and-streamlit.py  main.py  requirements.txt
price_house_regresion/: main.py
python_tools/: README.md
rfid/: README.md  requirements.txt
(+330 files in other folders)
